--- a/views/client/list.html
+++ b/views/client/list.html
@@ -241,15 +241,17 @@
       </div>
       <div class="list2-right">
         <div class="list2-right-list">
-          <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
+          <div class="list2-right-list-image-wrapper">
+            <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
+            </div>
             <div class="list1-forground-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
             </div>
             <div class="list-price-container">
               <span class="list-fake-price">10,000</span>
               <span class="list-real-price">49,500</span>
             </div>
+          </div>
 
-          </div>
           <div class="list2-right-list-title">
             <div class="title">
               <div class="main-title">광안 하운드 호텔</div>
@@ -280,7 +282,9 @@
         </div>
 
         <div class="list2-right-list">
-          <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
+          <div class="list2-right-list-image-wrapper">
+            <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
+            </div>
             <div class="list1-forground-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
             </div>
             <div class="list-price-container">
@@ -317,7 +321,9 @@
           </div>
         </div>
         <div class="list2-right-list">
-          <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
+          <div class="list2-right-list-image-wrapper">
+            <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
+            </div>
             <div class="list1-forground-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
             </div>
             <div class="list-price-container">
@@ -354,7 +360,9 @@
           </div>
         </div>
         <div class="list2-right-list">
-          <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
+          <div class="list2-right-list-image-wrapper">
+            <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
+            </div>
             <div class="list1-forground-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
             </div>
             <div class="list-price-container">
@@ -391,7 +399,9 @@
           </div>
         </div>
         <div class="list2-right-list">
-          <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
+          <div class="list2-right-list-image-wrapper">
+            <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
+            </div>
             <div class="list1-forground-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
             </div>
             <div class="list-price-container">
@@ -428,7 +438,9 @@
           </div>
         </div>
         <div class="list2-right-list">
-          <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
+          <div class="list2-right-list-image-wrapper">
+            <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
+            </div>
             <div class="list1-forground-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
             </div>
             <div class="list-price-container">
