--- a/views/client/main.html
+++ b/views/client/main.html
@@ -335,7 +335,31 @@
       </div>
       <div class="main5-body">
         <div class="main5-list">
-          <div class="main5-list-image" style="background-image:url('../../public/client/images/main_sample1.jpg')">
+          <div class="main5-list-image-wrapper">
+            <div class="main5-list-image" style="background-image:url('../../public/client/images/main_sample1.jpg')">
+            </div>
+            <div class="main5-view-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
+            </div>
+          </div>
+
+
+          <div class="main5-list-wrapper">
+            <div class="main5-list-title">
+              넘버 25 해둔대점
+            </div>
+            <div class="main5-list-address">
+              <img style="vertical-align: bottom;" src="../../public/client/images/01_main/main_middle_pin.png" alt="">
+              <span>부산 해운대구 우동 637-7부산 해운대구 우동 637-7</span>
+            </div>
+          </div>
+
+          <img class="view-more-btn" src="../../public/client/images/01_main/main_middle_again.png" alt="">
+        </div>
+
+        <div class="main5-list">
+          <div class="main5-list-image-wrapper">
+            <div class="main5-list-image" style="background-image:url('../../public/client/images/main_sample1.jpg')">
+            </div>
             <div class="main5-view-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
             </div>
           </div>
@@ -354,7 +378,9 @@
         </div>
 
         <div class="main5-list">
-          <div class="main5-list-image" style="background-image:url('../../public/client/images/main_sample1.jpg')">
+          <div class="main5-list-image-wrapper">
+            <div class="main5-list-image" style="background-image:url('../../public/client/images/main_sample1.jpg')">
+            </div>
             <div class="main5-view-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
             </div>
           </div>
@@ -373,26 +399,9 @@
         </div>
 
         <div class="main5-list">
-          <div class="main5-list-image" style="background-image:url('../../public/client/images/main_sample1.jpg')">
-            <div class="main5-view-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
+          <div class="main5-list-image-wrapper">
+            <div class="main5-list-image" style="background-image:url('../../public/client/images/main_sample1.jpg')">
             </div>
-          </div>
-
-          <div class="main5-list-wrapper">
-            <div class="main5-list-title">
-              넘버 25 해둔대점
-            </div>
-            <div class="main5-list-address">
-              <img style="vertical-align: bottom;" src="../../public/client/images/01_main/main_middle_pin.png" alt="">
-              <span>부산 해운대구 우동 637-7부산 해운대구 우동 637-7</span>
-            </div>
-          </div>
-
-          <img class="view-more-btn" src="../../public/client/images/01_main/main_middle_again.png" alt="">
-        </div>
-
-        <div class="main5-list">
-          <div class="main5-list-image" style="background-image:url('../../public/client/images/main_sample1.jpg')">
             <div class="main5-view-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
             </div>
           </div>
